# guid-slurp

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-no-traefik.yaml  docker-compose-p51.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: docker_publish.yml
docs/: traefik-staging.md
src/: startup.py
src/guid_slurp/: database_sync.py  main.py  mongo.py  startup.py
test/: test_api.py  test_info.py  test_startup.py
test/startup/: test_fetch.py
test/test_data/: podcastGuidUrl.guidUrl.json
traefik/: traefik.yaml
