[tool.poetry]
name = "guid-slurp"
version = "1.3.0"
description = "Slurping up GUIDs from Hive"
authors = ["Brian <brian@podping.org>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "guid_slurp", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
httpx = "^0.24.1"
pymongo = "^4.4.1"
pytz = "^2023.3"
single-source = "^0.3.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
rfc3987 = "^1.3.8"
gunicorn = "^21.2.0"
pydantic = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
mypy = "^1.3.0"
mongomock = "^4.1.2"
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"